# Aavishkar

v2v-safenet/: .env.example  PRESENTATION.md  README.md  index.html  package-lock.json  package.json
v2v-safenet/src/: App.css  App.jsx
v2v-safenet/src/components/: CollisionAlert.css  CollisionAlert.jsx  VehicleInfoPanel.css  VehicleInfoPanel.jsx  VehicleMap.jsx
v2v-safenet/src/config/: firebase.js
v2v-safenet/src/hooks/: useVehicleTracking.js
v2v-safenet/src/utils/: collisionDetection.js  geoUtils.js
v2v_prototype/: CMakeLists.txt  README.md  package.xml
v2v_prototype/launch/: v2v.launch.py
v2v_prototype/msg/: BasicSafetyMessage.msg
v2v_prototype/scripts/: generate_keys.sh  run_demo.bat  run_demo.sh
v2v_prototype/src/: bsm_listener.cpp  bsm_publisher.cpp  kalman_filter.hpp  ttc.hpp
v2v_realworld/: DEPLOY.md  Laptop  PHONE_SETUP.md  USB_SETUP.md  gps_obu.py  install_adb.bat  run_phone_mode.bat  run_usb_mode.bat  run_virtual_fleet.bat  setup_adhoc.sh
v2v_standalone/: main.py  run_sim.bat
